--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,8 @@
 .Trashes
 ehthumbs.db
 Thumbs.db
+blog/app.py
+blog/Manager - Performance vs Target.pbix
+index copy.html - Shortcut.lnk
+images/LinkedInCoverImg(d3js).png
+images/LinkedInCoverImg2(d3js).png
