Article #16 I Don't Care About Beans

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,5 @@ blog/Manager - Performance vs Target.pbix
 index copy.html - Shortcut.lnk
 images/LinkedInCoverImg(d3js).png
 images/LinkedInCoverImg2(d3js).png
+blog/Import Model.pbix
+blog/teasers.txt
